--- a/index.html
+++ b/index.html
@@ -677,5 +677,10 @@
         </div>
       </div>
     </footer>
+    <script>
+      document.addEventListener("contextmenu", (event) =>
+        event.preventDefault()
+      );
+    </script>
   </body>
 </html>
